Fixed kanji cards on index with smaller jlpt level div and more balanced spacing

--- a/app/assets/stylesheets/pages/_kanji.scss
+++ b/app/assets/stylesheets/pages/_kanji.scss
@@ -177,28 +177,48 @@ span.level-filter {
   justify-content: left;
 }
 
-.level-1 {
+.level.level-1 {
   background-color: red;
   color: black;
+  margin: auto;
+  width: 70px;
+  border-radius: 5px;
+  margin-bottom: 5px;
 }
 
-.level-2 {
+.level.level-2 {
   background-color: orange;
   color: black;
+  margin: auto;
+  width: 70px;
+  border-radius: 5px;
+  margin-bottom: 5px;
 }
 
-.level-3 {
+.level.level-3 {
   background-color: yellow;
   color: black;
+  margin: auto;
+  width: 70px;
+  border-radius: 5px;
+  margin-bottom: 5px;
 }
 
-.level-4 {
+.level.level-4 {
   background-color: #6abe30;
   color: black;
+  margin: auto;
+  width: 70px;
+  border-radius: 5px;
+  margin-bottom: 5px;
 }
-.level-5 {
+.level.level-5 {
   background-color: #0897f6;
   color: black;
+  margin: auto;
+  width: 70px;
+  border-radius: 5px;
+  margin-bottom: 5px;
 }
 
 .button-container {
